<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <!-- TODO: つくった String リソースを利用した TextView を配置していく -->

        <TextView
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world" />

        <TextView
            android:id="@+id/view2"
            android:layout_below="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ojisan" />

        <TextView
            android:id="@+id/view3"
            android:layout_below="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ojisama" />

        <TextView
            android:id="@+id/view4"
            android:layout_below="@+id/view3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kakka" />

        <TextView
            android:id="@+id/view5"
            android:layout_below="@+id/view4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/funatsu" />

        <TextView
            android:id="@+id/view6"
            android:layout_below="@+id/view5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ishii" />

</RelativeLayout>